--- a/wwwRoot/index.html
+++ b/wwwRoot/index.html
@@ -17,7 +17,7 @@
             <div class="img-portifolio">
                 <img src="img/felipe.jpeg" alt="Felipe Pedrozo" >
             </div>
-            <div>
+            <div class="sobre-mim">
                 <h2>Sobre mim</h2>
                 <p>Sou um entusiasta da tecnologia, sempre em busca de novos desafios e conhecimentos. Estou comprometido em criar soluções inovadoras e eficientes. Vamos conectar e compartilhar ideias!</p>
             </div>
@@ -45,9 +45,9 @@
                 </div>
             </div>
 
-            <div>
+            <div class="container-contato">
                 <h4>Contato:</h4>
-                <div container-icons>
+                <div class="container-icons">
                     <div class="icon">
                         <img src="icons/github.png" alt="">
                     </div>
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-
+        <p>&copy;Felipe Pedrozo | felipepedrozoribeiro@hotmail.com</p>
     </footer>
 </body>
 </html>
